--- a/src/components/about/Details.scss
+++ b/src/components/about/Details.scss
@@ -74,6 +74,10 @@
     }
 }
 
+sl-dialog {
+    color: #FF0066 !important;
+}
+
 @media all and(min-width:886px){
     .aboutbg{
         margin-top: 8.6em;
